Do not send bounds change event in minimized state

Changing bounds in minimized state can lead to
bounds change on android side when restored, which
in turn causes delay.

Bug: 889438
Test: covered by unit test
Change-Id: I9f9c2feef9cf468a670bcdb5a729c5877fdca2b6
Reviewed-on: https://chromium-review.googlesource.com/c/1258970
Commit-Queue: Mitsuru Oshima <oshima@chromium.org>
Reviewed-by: Ahmed Fakhry <afakhry@chromium.org>
Cr-Commit-Position: refs/heads/master@{#596526}
Former-commit-id: 2aba1b0d18473ad68ca3cecb81836253e33fe5d9