components/exo/client_controlled_shell_surface.cc
@@ -539,9 +539,11 @@ void ClientControlledShellSurface::OnBoundsChangeEvent(
     int64_t display_id,
     const gfx::Rect& window_bounds,
     int bounds_change) {
-  // Do no update the bounds unless we have geometry from client.
+  // 1) Do no update the bounds unless we have geometry from client.
+  // 2) Do not update the bounds if window is minimized.
+  // The bounds will be provided by client when unminimized.
   if (!geometry().IsEmpty() && !window_bounds.IsEmpty() &&
-      bounds_changed_callback_) {
+      !widget_->IsMinimized() && bounds_changed_callback_) {
     // Sends the client bounds, which matches the geometry
     // when frame is enabled.
     ash::NonClientFrameViewAsh* frame_view = GetFrameView();
